# Cacao

./: .gitignore  CMakeLists.txt  DX12Benchmark.cpp  README.md  SynchronizationContext.cpp  SynchronizationContext.h  TODO.md  VkContext.cpp  VkContext.h  main.bak.cpp  main.cpp  sprite.slang  sprite_update.slang  test.slang
.github/workflows/: ci.yml
demos/: compute_demo.cpp  compute_demo.slang  cornell_box.cpp  cornell_box.slang  hello_triangle.cpp  hello_triangle.slang  scene_3d.cpp  scene_3d.slang  shadow_map.cpp  shadow_map.slang  textured_quad.cpp  textured_quad.slang
docs/: api-reference.md  architecture.md  backend-notes.md  getting-started.md  shader-guide.md
docs/zh/: api-reference.md  architecture.md  backend-notes.md  getting-started.md  shader-guide.md
include/: Adapter.h  Barrier.h  Buffer.h  Builders.h  Cacao.hpp  CacaoAdapter.h  CacaoBarrier.h  CacaoBuffer.h  CacaoCommandBufferEncoder.h  CacaoComputePipeline.h  CacaoDescriptorPool.h  CacaoDescriptorSet.h  CacaoDescriptorSetLayout.h  CacaoDevice.h  CacaoEasy.h  CacaoInstance.h  CacaoPipeline.h  CacaoPipelineLayout.h  CacaoQueue.h  CacaoSampler.h  CacaoShaderCompiler.h  CacaoShaderModule.h  CacaoSurface.h  CacaoSwapchain.h  CacaoSynchronization.h  CacaoTexture.h  CaocaoGraphicsPipeline.h  CommandBufferEncoder.h  Core.h  DescriptorPool.h  DescriptorSet.h  DescriptorSetLayout.h  Device.h  Instance.h  Pipeline.h  PipelineDefs.h  Queue.h  Sampler.h  ShaderCompiler.h  ShaderModule.h  (+4 more)
include/Impls/D3D12/: D3D12Adapter.h  D3D12Buffer.h  D3D12CommandBufferEncoder.h  D3D12Common.h  D3D12DescriptorLayout.h  D3D12DescriptorPool.h  D3D12DescriptorSet.h  D3D12DescriptorSetLayout.h  D3D12Device.h  D3D12Instance.h  D3D12MemAlloc.h  D3D12Pipeline.h  D3D12PipelineLayout.h  D3D12Queue.h  D3D12Sampler.h  D3D12ShaderModule.h  D3D12Surface.h  D3D12Swapchain.h  D3D12Synchronization.h  D3D12Texture.h
include/Impls/Vulkan/: VKAdapter.h  VKBuffer.h  VKCommandBufferEncoder.h  VKCommon.h  VKConvert.h  VKDescriptorPool.h  VKDescriptorSet.h  VKDescriptorSetLayout.h  VKDevice.h  VKInstance.h  VKPipeline.h  VKPipelineLayout.h  VKQueue.h  VKSampler.h  VKShaderModule.h  VKSurface.h  VKSwapchain.h  VKSynchronization.h  VKTexture.h
src/: Adapter.cpp  CacaoAdapter.cpp  CacaoBarrier.cpp  CacaoBuffer.cpp  CacaoCommandBufferEncoder.cpp  CacaoComputePipeline.cpp  CacaoDescriptorPool.cpp  CacaoDescriptorSet.cpp  CacaoDescriptorSetLayout.cpp  CacaoDevice.cpp  CacaoInstance.cpp  CacaoPipeline.cpp  CacaoPipelineLayout.cpp  CacaoQueue.cpp  CacaoSampler.cpp  CacaoShaderCompiler.cpp  CacaoShaderModule.cpp  CacaoSurface.cpp  CacaoSwapchain.cpp  CacaoSynchronization.cpp  CacaoTexture.cpp  CaocaoGraphicsPipeline.cpp  Device.cpp  Instance.cpp  ShaderCompiler.cpp  vk_mem_alloc.cpp
src/Impls/D3D12/: D3D12Adapter.cpp  D3D12Buffer.cpp  D3D12CommandBufferEncoder.cpp  D3D12Common.cpp  D3D12DescriptorLayout.cpp  D3D12DescriptorPool.cpp  D3D12DescriptorSet.cpp  D3D12DescriptorSetLayout.cpp  D3D12Device.cpp  D3D12Instance.cpp  D3D12MemAlloc.cpp  D3D12Pipeline.cpp  D3D12PipelineLayout.cpp  D3D12Queue.cpp  D3D12Sampler.cpp  D3D12ShaderModule.cpp  D3D12Surface.cpp  D3D12Swapchain.cpp  D3D12Synchronization.cpp  D3D12Texture.cpp
src/Impls/Vulkan/: VKAdapter.cpp  VKBuffer.cpp  VKCommandBufferEncoder.cpp  VKCommon.cpp  VKConvert.cpp  VKDescriptorPool.cpp  VKDescriptorSet.cpp  VKDescriptorSetLayout.cpp  VKDevice.cpp  VKInstance.cpp  VKPipeline.cpp  VKPipelineCache.cpp  VKPipelineLayout.cpp  VKQueue.cpp  VKSampler.cpp  VKShaderModule.cpp  VKSurface.cpp  VKSwapchain.cpp  VKSynchronization.cpp  VKTexture.cpp
tests/: conformance_test.cpp
